src/parsers/snapshots/meshb__parsers__mail_parser__tests__node_name_ok_2.snap
---
source: src/parsers/mail_parser.rs
expression: "node_or_cell_name(\"MD12\")"
---
Ok(
    (
        "",
        "MD12",
    ),
)
