src/parsers/snapshots/meshb__parsers__mail_parser__tests__node_name_parser_should_work-4.snap
---
source: src/mail_parser.rs
expression: "node_name(\"MD12\")"
---
Ok(
    (
        "",
        "MD12",
    ),
)
